Fix bug caused by using optional of list
Of course a list is never null so optional is never empty